# SmartPDF-Science

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: INSTALLATION.md  QUICKSTART.md  USAGE.md
examples/: advanced_usage.py  api_client.py  basic_usage.py  batch_processing.py
scripts/: download_models.py  pdf_to_md_gpu.py  pdf_to_md_gpu_demo.py  run_api.sh  run_ui.sh  setup.sh
src/smartpdf/: __init__.py
src/smartpdf/api/: __init__.py  fastapi_app.py
src/smartpdf/converters/: __init__.py  md_to_docx.py  md_to_html.py  md_to_latex.py
src/smartpdf/core/: __init__.py  filter.py  ocr_engine.py  preprocessor.py
src/smartpdf/llm/: __init__.py  qwen_corrector.py
src/smartpdf/ui/: gradio_app.py
src/smartpdf/utils/: config.py  logger.py
tests/: __init__.py  conftest.py  test_api.py  test_converters.py  test_llm.py  test_ocr_engine.py
